--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html , body{
   height: 100%;
   display: flex;
   align-items: center;
-  color:;
+  justify-content: center;
   margin: 0;
 padding: 0;
 
